teste CRUD services finalizados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.profiles.active=${PROFILE_SPRING}
-server.port=${PORT}
+#spring.profiles.active=${PROFILE_SPRING}
+#server.port=${PORT}
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
